Implementation of V2 endpoints and service
- temporary rename old services to V1